# andrew-ng-machine-learning

./: .gitignore  flake.nix  kernels.nix  pyproject.toml
1_supervised_machine_learning/week_1/: Lab01_Python_Jupyter_Soln-2.ipynb  Lab02_Model_Representation_Soln.ipynb  Lab03_Cost_function_Soln.ipynb  Lab04_Gradient_Descent_Soln.ipynb
1_supervised_machine_learning/week_2/: A01_Linear_Regression.ipynb  Lab01_Python_Numpy_Vectorization_Soln.ipynb  Lab02_Multiple_Variable_Soln.ipynb  Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb  Lab04_FeatEng_PolyReg_Soln.ipynb  Lab05_Sklearn_GD_Soln.ipynb  Lab06_Sklearn_Normal_Soln.ipynb
1_supervised_machine_learning/week_3/: Lab01_Classification_Soln.ipynb  Lab02_Sigmoid_function_Soln.ipynb  Lab03_Decision_Boundary_Soln.ipynb
